# GuildCore

./: .env  Cargo.toml  LICENSE-MIT  README.md  board.db
.sqlx/: query-03f4a65a89100aae7de28b4287b2a67ca048f4765190ad60a2145ddf98c02b7f.json  query-0bfe7a598cab05756b43125546a97851838caf49dc081ca3159055e66addc48c.json  query-2f9b58b5ba7988ee1073a5f81e2ef152d9e965f5d6be5add9de6aa24a52f612a.json  query-6a0424c0f361222f56853b0b005212dd7ad10719d71416cabc94ecf70c2e412a.json  query-bcc33731f173ef30f7d50d20fb615f3bcc771310e28ce5a4aced2373591d01d4.json  query-d34697e8f561ff9601983a72a96cbb1b108173e4c50b88976b7b883c1ae25238.json  query-dc4c3498636fd7c4d9b455361e1c4335dba94f6b5ba5914ccc96a9e4961993b6.json  query-e111880d5e12f61c831d3464451c1a534075501a1ce66bf2b5481f7e641b3200.json  query-f072195f78583bb05d32202a61ecb1a18a24a3b27ccd742f707e190185d14f83.json
examples/: basic_usage.rs
migrations/: 20260105000000_initial.sql
src/: board.rs  lib.rs  main.rs  ops.md  request.rs
