[package]
name = "guild_core"
version = "0.1.0"
edition = "2024"
authors = ["Khatm Peers <khatm.peers@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Minimal state machine for request-based work coordination."
repository = "https://github.com/khatmpeers/GuildCore"
homepage = "https://github.com/khatmpeers/GuildCore"
documentation = "https://docs.rs/guild-core"
keywords = ["request", "commission", "guild", "cooperative"]
categories = ["web-programming"]
readme = "README.md"
include = [
    "src/**/*",
    "migrations/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    ".env",
    ".sqlx/**/*"
]

[dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.148"
anyhow = "1.0.100"
dotenv = "0.15.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
